View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033669 | Open CASCADE | OCCT:Coding | public | 2024-04-06 13:33 | 2024-04-06 21:09 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Target Version | 7.9.0 | ||||
Summary | 0033669: Coding - Processing Clang-19 warnings | ||||
Description | Needs to fix warnings in Clang 19 processing | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33669 has been created by dpasukhi. SHA-1: 323aa4abba62961106ce051fabe282c18ac21fb6 Detailed log of new commits: Author: dpasukhi Date: Sat Apr 6 10:34:27 2024 +0000 0033669: Coding - Processing Clang-19 warnings Fixed issue with not-used variables Fixed issue with function casting |
|
Branch CR33669 has been updated by dpasukhi. SHA-1: e1b78718ca8f93c0c1b368a904fa9c9453b6b74b Detailed log of new commits: Author: dpasukhi Date: Sat Apr 6 18:09:10 2024 +0000 // fix a little more warnings |