0033669: Coding - Processing Clang-19 warnings

Fixed issue with not-used variables
Fixed issue with function casting